<resources>
    <string name="app_name">Buscaminas</string>

    //variables menu principal
    <string name="option_play">Jugar</string>
    <string name="option_config">Configuración</string>
    <string name="option_exit">Salir</string>
    <string name="title_activity_play">PlayActivity</string>

    //variables dialogo salida
    <string name="title_dialog">Saliendo de Buscaminas</string>
    <string name="message">"Estás seguro que quieres salir?"</string>

    //variables configuración
    <string name="difficulty">Dificultad</string>
    <string name="number_bombs">Número de bombas</string>
    <string name="easy">Fácil (5x5)</string>
    <string name="normal">Normal (8x8)</string>
    <string name="difficult">Dificil (12x12)</string>
    <string name="back">Atrás</string>
    <string name="save">Guardar</string>

    //variables juego
    <string name="restart">Reiniciar</string>
    <string name="solve">Solution</string>

</resources>