<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/l_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_main"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/play"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:text="@string/option_play"
            android:textSize="20dp"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorAccent"/>

        <Button
            android:id="@+id/config"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:text="@string/option_config"
            android:textSize="20dp"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorAccent"/>

        <Button
            android:id="@+id/exit"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:text="@string/option_exit"
            android:textSize="20dp"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorAccent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>